<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:id="@+id/editNoteText" app:layout_constraintTop_toBottomOf="@+id/editNoteTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintHorizontal_bias="0.0"
        android:hint="Note text"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCourses" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:id="@+id/editNoteTitle" app:layout_constraintTop_toBottomOf="@+id/spinnerCourses"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        android:hint="Note title"/>

</androidx.constraintlayout.widget.ConstraintLayout>